fixing vertical spacing

--- a/style-human.css
+++ b/style-human.css
@@ -9002,9 +9002,6 @@ a.bbg__kits__intro__more--link:hover {
     line-height: 1.4;
   }
 }
-.bbg__map-area__text .bbg__map__entity--small {
-  margin: -2rem 0 0;
-}
 .bbg__map-area__text .bbg__map__entity--small p {
   font-family: "Lato", "Helvetica", "Arial", sans-serif;
   font-size: 1.6rem;
